iceberg/manifests/rest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iceberg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: iceberg
  name: rest
  labels:
    component: rest
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: rest
  template:
    metadata:
      labels:
        component: rest
    spec:
      containers:
      - name: rest
        image: tabulario/iceberg-rest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  namespace: iceberg
  name: rest
  labels:
    component: rest
spec:
  type: ClusterIP
  ports:
    - port: 8181
      targetPort: 8181
      protocol: TCP
      name: api
  selector:
    component: rest
