iceberg/manifests/spark-iceberg.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iceberg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: iceberg
  name: spark-iceberg
  labels:
    component: spark-iceberg
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: spark-iceberg
  template:
    metadata:
      labels:
        component: spark-iceberg
    spec:
      containers:
      - name: spark-iceberg
        image: tabulario/spark-iceberg
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
          name: jupyter
        - containerPort: 8080
          name: web
        - containerPort: 10000
          name: int1
        - containerPort: 10001
          name: int2
        volumeMounts:
          - name: spark-default-config
            mountPath: /opt/spark/conf/spark-defaults.conf
            subPath: spark-defaults.conf
      volumes:
        - name: spark-default-config
          configMap:
            name: spark-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: iceberg
  name: spark-iceberg
  labels:
    component: spark-iceberg
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: jupyter
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: web
    - port: 10000
      targetPort: 10000
      protocol: TCP
      name: int1
    - port: 10002
      targetPort: 10002
      protocol: TCP
      name: int2
  selector:
    component: spark-iceberg
